# GASPAR

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  test_package.py
.github/workflows/: ci.yml  python-package.yml
examples/: basic_usage.py
package/: __init__.py  __main__.py
package/gaspar/config/: loader.py
src/gaspar/: _version.py
tests/: test_package.py
