[metadata]
name = GASPAR
description = GenAI-powered System for Privacy incident Analysis and Recovery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AmadeusITGroup/GASPAR
author = Mehdi Boustala
author_email = mehdi.boustala@amadeus.com
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    = src
python_requires = >=3.8
setup_requires =
    setuptools_scm

[tool.setuptools_scm]
write_to = src/gaspar/_version.py

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gaspar = gaspar.cli.main:main

[options.package_data]
gaspar =
    examples/*.yaml
    examples/*.py
    examples/documents/*.txt